feature: hint button functionality
added a 'hidden' class to hint button element in order to hide it until player has guessed a number at least 3 times. Then guessCheck func will remove the class. Hiting play again button will re-add the class back on element

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div id="menu-btns-cont">
         <button id="reset" class="button menu-btns" type="button">PLAY AGAIN</button>
-        <button id="hint" class="button menu-btns" type="button">HINT</button>
+        <button id="hint" class="button menu-btns hidden" type="button">HINT</button>
       </div>
     </div>
 
