--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </div>
     </div>
 
-    <script src="/js/guessing-game.js"></script>
+    <script src="/js/guessing-game.js" type="text/JavaScript"></script>
   </body>
 </html>
